# code-recap

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  deploy_pypi.py  deploy_reports.py  generate_blog_post.py  generate_html_report.py  git_activity_review.py  git_utils.py  list_commits_by_date.py  pyproject.toml  summarize_activity.py  summarize_daily_activity.py
.github/workflows/: ci.yml  pages.yml  publish.yml
config.example/: config.yaml
docs/: commands.md  configuration.md  deployment.md  extending.md  index.md
output.example.clients/: internal-summary-2024.md  public-summary-2024.md
output.example.clients/acme_widgets/periods/: 2024-11.md  2024-12.md
output.example.clients/html/: index.html  internal.html  public.html
output.example.clients/html/acme_widgets/: 2024-10.html  2024-11.html  2024-12.html  index.html
output.example.clients/html/techstart/: 2024-10.html  2024-11.html  2024-12.html  index.html
output.example.clients/techstart/periods/: 2024-10.md  2024-11.md  2024-12.md
output.example.solo/: internal-summary-2024.md  public-summary-2024.md
output.example.solo/html/: index.html  internal.html  public.html
output.example.solo/html/projects/: 2024-10.html  2024-11.html  2024-12.html  index.html
output.example.solo/projects/: summary-2024.md
output.example.solo/projects/periods/: 2024-10.md  2024-11.md  2024-12.md
output.example/acme_widgets/: summary-2024.md
output.example/acme_widgets/periods/: 2024-10.md
output.example/html/: index.html
output.example/html/acme_widgets/: 2024-10.html  2024-11.html  2024-12.html  index.html
output.example/html/techstart/: 2024-10.html  2024-11.html  2024-12.html  index.html
output.example/techstart/: summary-2024.md
scripts/: bump-version.sh
src/code_recap/: __init__.py  arguments.py  cli.py  deploy_reports.py  generate_blog_post.py  generate_html_report.py  git_activity_review.py  git_utils.py  list_commits_by_date.py  paths.py  summarize_activity.py  summarize_daily_activity.py
